package src.models;

public class Jugador {
    
}
